Quelques modifications  interfaces surveillant + participant ...